searchable select dropdowns and results page

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-pagination-js": "^2.0.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "react-select-search": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
