--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "cd client && npm run build"
-  publish = "./client/build"
+  command = "npm run build"
+  publish = "client/build"
